--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Altlokalt / vi hjelper deg handle lokalt</title>
+    <title>Altlokalt / handle lokalt</title>
     
     <script type="text/javascript">
     (function(c,l,a,r,i,t,y){
